--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "name": "amazon_cloud_assignment",
   "version": "1.0.0",
   "description": "Amazon Cloud Engineer Assignment",
-  "main": "index.js",
+  "main": "app.js",
+  "scripts": {
+    "start": "node app"
+  },
   "repository": "git@github.com:yuriechan/amazon_authentication.git",
   "author": "Yurie <cutecupcakeandcute@gmail.com>",
   "license": "MIT"
